--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -109,6 +109,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
+        file: ./app/Dockerfile
         push: true
         tags: sourav04/demo_k8s_app_aws:main
         labels: ${{ steps.meta.outputs.labels }}
