--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,33 +1,20 @@
-FROM python:3.11-slim AS builder
+FROM python:3.11-slim
 
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
     gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-COPY requirements.txt .
-RUN pip install --no-cache-dir --user -r requirements.txt
-
-COPY src/ ./src/
-RUN mkdir -p /app/src/templates && chown -R appuser:appuser /app
-
-FROM python:3.11-slim
-
-RUN groupadd -r appuser && useradd -r -g appuser appuser
-
-WORKDIR /app
-
-RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /root/.local /home/appuser/.local
-RUN pwd
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY src/ ./src/
+RUN mkdir -p /app/src/templates
 
-RUN mkdir -p /app/src/templates && chown -R appuser:appuser /app
+RUN groupadd -r appuser && useradd -r -g appuser appuser \
+    && chown -R appuser:appuser /app
 
 USER appuser
 
