--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -147,9 +147,8 @@ jobs:
       env:
         TF_VAR_ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
         
-    - name: List files before upload
-      run: ls -la
-      working-directory: terraform
+    - name: Rename lock file for upload
+      run: cp terraform/.terraform.lock.hcl terraform/lockfile.hcl
         
     - name: Upload tfplan and lock file
       uses: actions/upload-artifact@v4
@@ -157,7 +156,7 @@ jobs:
         name: tfplan
         path: |
           terraform/tfplan
-          terraform/.terraform.lock.hcl
+          terraform/lockfile.hcl
 
   deploy-infrastructure:
     name: Deploy Infrastructure
@@ -186,6 +185,8 @@ jobs:
       with:
         name: tfplan
         path: terraform
+    - name: Rename lockfile back to .terraform.lock.hcl
+      run: mv terraform/lockfile.hcl terraform/.terraform.lock.hcl
     - name: Verify downloaded files
       run: |
         echo "Downloaded artifact contents:"
