--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -196,7 +196,11 @@ jobs:
     - name: List files in terraform directory
       run: ls -la
       working-directory: terraform
-        
+
+    - name: Terraform Init (Apply)
+      run: terraform init
+      working-directory: terraform
+
     - name: Terraform Apply
       run: terraform apply -auto-approve tfplan
       working-directory: terraform
