--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -232,11 +232,15 @@ jobs:
         else
           echo "SLACK_WEBHOOK_URL is set"
         fi 
-    - name: Notify Slack
+    - name: Slack Notification
       uses: 8398a7/action-slack@v3
       with:
-        status: ${{ job.status }}
+        status: success
         channel: '#new-channel'
-        author_name: 8398a7@action-slack
+        author_name: GitHub Actions
         github_token: ${{ secrets.GITHUB_TOKEN }}
-      if: always()
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        REGISTRY: ghcr.io
+        IMAGE_NAME: souravdixit04/demo_k8s_app_aws
+
