--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -207,16 +207,162 @@ jobs:
       env:
         TF_VAR_ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
         
+    - name: Setup kubectl
+      run: |
+        # Install kubectl
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/
+        
+    - name: Get kubeconfig and setup cluster access
+      run: |
+        # Get cluster info from Terraform output
+        cd terraform
+        KUBERNETES_API_LB=$(terraform output -raw kubernetes_api_lb_dns)
+        echo "Kubernetes API Load Balancer: $KUBERNETES_API_LB"
+        
+        # Get kubeconfig from master node (you'll need to implement this based on your setup)
+        # For now, we'll create a basic kubeconfig
+        cat > kubeconfig << EOF
+        apiVersion: v1
+        kind: Config
+        clusters:
+        - name: k3s-cluster
+          cluster:
+            server: https://$KUBERNETES_API_LB:6443
+            insecure-skip-tls-verify: true
+        contexts:
+        - name: k3s-context
+          context:
+            cluster: k3s-cluster
+            user: k3s-user
+        current-context: k3s-context
+        users:
+        - name: k3s-user
+          user:
+            token: ""
+        EOF
+        
+        export KUBECONFIG=./kubeconfig
+        
+        # Wait for cluster to be ready
+        echo "Waiting for cluster to be ready..."
+        timeout 300 bash -c 'until kubectl get nodes; do sleep 10; done'
+        
+    - name: Install and configure ArgoCD
+      run: |
+        cd terraform
+        export KUBECONFIG=./kubeconfig
+        
+        echo "Installing ArgoCD..."
+        
+        # Create ArgoCD namespace
+        kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
+        
+        # Install ArgoCD
+        kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+        
+        # Wait for ArgoCD to be ready
+        echo "Waiting for ArgoCD to be ready..."
+        kubectl wait --for=condition=available --timeout=600s deployment/argocd-server -n argocd || {
+          echo "ArgoCD server deployment failed to become ready. Checking logs..."
+          kubectl logs -n argocd deployment/argocd-server --tail=20
+          echo "Continuing with installation..."
+        }
+        
+        # Scale down ArgoCD for resource efficiency
+        echo "Scaling ArgoCD for resource efficiency..."
+        kubectl scale deployment argocd-server -n argocd --replicas=1
+        kubectl scale deployment argocd-repo-server -n argocd --replicas=1
+        kubectl scale deployment argocd-application-controller -n argocd --replicas=1
+        
+        # Wait for scaled deployments to be ready
+        kubectl wait --for=condition=available --timeout=300s deployment/argocd-server -n argocd
+        kubectl wait --for=condition=available --timeout=300s deployment/argocd-repo-server -n argocd
+        kubectl wait --for=condition=available --timeout=300s deployment/argocd-application-controller -n argocd
+        
+        echo "ArgoCD installation completed successfully!"
+        
+        # Get ArgoCD admin password
+        ARGOCD_PASSWORD=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d 2>/dev/null || echo "password-not-available-yet")
+        echo "ArgoCD admin password: $ARGOCD_PASSWORD"
+        
+        # Save ArgoCD info
+        echo "ArgoCD admin password: $ARGOCD_PASSWORD" > argocd-info.txt
+        echo "ArgoCD UI will be available at: http://$KUBERNETES_API_LB:8080" >> argocd-info.txt
+        
+    - name: Deploy ArgoCD Application
+      run: |
+        cd terraform
+        export KUBECONFIG=./kubeconfig
+        
+        echo "Deploying ArgoCD Application..."
+        
+        # Apply the ArgoCD application manifest
+        kubectl apply -f ../argocd/application.yaml
+        
+        # Wait for the application to be synced
+        echo "Waiting for ArgoCD application to sync..."
+        kubectl wait --for=condition=healthy --timeout=300s application/python-app -n argocd || {
+          echo "Application sync failed. Checking ArgoCD application status..."
+          kubectl describe application python-app -n argocd
+          echo "Continuing..."
+        }
+        
+        echo "ArgoCD application deployment completed!"
+        
+    - name: Deploy application with Helm
+      run: |
+        cd terraform
+        export KUBECONFIG=./kubeconfig
+        
+        # Install Helm
+        curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+        
+        # Deploy the application
+        echo "Deploying application with Helm..."
+        helm install python-app ../helm/python-app \
+          --set image.repository=souravdixit04/demo_k8s_app_aws \
+          --set image.tag=main \
+          --wait --timeout=300s
+        
+        echo "Application deployment completed!"
+        
+    - name: Verify deployment
+      run: |
+        cd terraform
+        export KUBECONFIG=./kubeconfig
+        
+        echo "Verifying deployment..."
+        kubectl get pods -A
+        kubectl get svc -A
+        
+        # Check if ArgoCD is running
+        echo "ArgoCD status:"
+        kubectl get pods -n argocd
+        
+        # Check if application is running
+        echo "Application status:"
+        kubectl get pods -l app=python-app
+        
     - name: Get cluster info
       run: |
         cd terraform
         terraform output -json > cluster-info.json
         
+        # Add ArgoCD info to cluster info
+        if [ -f argocd-info.txt ]; then
+          echo "ArgoCD Information:" >> cluster-info.txt
+          cat argocd-info.txt >> cluster-info.txt
+        fi
+        
     - name: Upload cluster info
       uses: actions/upload-artifact@v4
       with:
         name: cluster-info
-        path: terraform/cluster-info.json
+        path: |
+          terraform/cluster-info.json
+          terraform/cluster-info.txt
 
   notify:
     name: Notify Deployment
