--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -419,11 +419,70 @@ jobs:
         echo "    token: \"\"" >> kubeconfig_new
         
         # Copy the token from the original kubeconfig
+        echo "Extracting token from original kubeconfig..."
         TOKEN=$(grep -A 1 "token:" kubeconfig | tail -n 1 | tr -d ' ')
+        
+        if [ -z "$TOKEN" ]; then
+          echo "ERROR: Could not extract token from kubeconfig"
+          echo "Original kubeconfig content:"
+          cat kubeconfig
+          echo "Trying to get token directly from master node..."
+          
+          # Get token directly from master node
+          TOKEN=$(aws ssm send-command \
+            --instance-ids "$MASTER_INSTANCE_ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["sudo cat /var/lib/rancher/k3s/server/node-token"]' \
+            --query 'Command.CommandId' \
+            --output text)
+          
+          sleep 10
+          
+          TOKEN=$(aws ssm get-command-invocation \
+            --command-id "$TOKEN" \
+            --instance-id "$MASTER_INSTANCE_ID" \
+            --query 'StandardOutputContent' \
+            --output text | tr -d '\n\r')
+          
+          if [ -z "$TOKEN" ]; then
+            echo "ERROR: Could not get token from master node"
+            exit 1
+          fi
+          
+          echo "Token retrieved from master node: ${TOKEN:0:10}..."
+        fi
+        
+        # Update the token in the new kubeconfig
         sed -i "s/token: \"\"/token: \"$TOKEN\"/" kubeconfig_new
+        
+        # Verify the new kubeconfig
+        echo "Verifying new kubeconfig..."
+        if [ ! -f kubeconfig_new ] || [ ! -s kubeconfig_new ]; then
+          echo "ERROR: New kubeconfig is empty or missing"
+          exit 1
+        fi
+        
+        echo "New kubeconfig content:"
+        cat kubeconfig_new
         
         # Use the new kubeconfig
         cp kubeconfig_new kubeconfig
+        
+        # Fallback: If the new kubeconfig doesn't work, try modifying the original
+        echo "Testing kubeconfig connectivity..."
+        if ! kubectl get nodes --request-timeout=30s 2>/dev/null; then
+          echo "New kubeconfig failed. Trying fallback approach..."
+          
+          # Use original kubeconfig but update server and add insecure flag
+          cp kubeconfig kubeconfig_backup
+          sed -i "s|server: https://127.0.0.1:6443|server: https://$KUBERNETES_API_LB:6443|g" kubeconfig
+          
+          # Add insecure-skip-tls-verify to the cluster section
+          sed -i '/cluster:/a\    insecure-skip-tls-verify: true' kubeconfig
+          
+          echo "Fallback kubeconfig content:"
+          cat kubeconfig
+        fi
         
         export KUBECONFIG=./kubeconfig
         
