--- a/helm/python-app/values.yaml
+++ b/helm/python-app/values.yaml
@@ -104,7 +104,7 @@ probes:
 monitoring:
   enabled: true
   serviceMonitor:
-    enabled: true
+    enabled: false
     interval: "30s"
     scrapeTimeout: "10s"
   podMonitor:
