--- a/helm/python-app/Chart.yaml
+++ b/helm/python-app/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: python-app
-description: A Helm chart for the Python Flask application with visitor counter
+description: A Helm chart for the Python Flask application
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
@@ -8,10 +8,9 @@ keywords:
   - python
   - flask
   - kubernetes
-  - demo
-home: https://github.com/your-org/k3s-demo
+home: https://github.com/souravdixit04/k3_demo
 sources:
-  - https://github.com/your-org/k3s-demo
+  - https://github.com/souravdixit04/k3_demo
 maintainers:
-  - name: Your Name
-    email: your.email@example.com 
+  - name: Sourav Dixit
+    email: souravdixit04@gmail.com 
