--- a/helm/python-app/templates/servicemonitor.yaml
+++ b/helm/python-app/templates/servicemonitor.yaml
@@ -1,11 +1,12 @@
-{{- if and .Values.monitoring.enabled .Values.monitoring.serviceMonitor.enabled }}
+{{- $monitoring := include "python-app.monitoring" . | fromYaml }}
+{{- if and $monitoring.enabled $monitoring.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "python-app.fullname" . }}
   labels:
     {{- include "python-app.labels" . | nindent 4 }}
-    {{- with .Values.monitoring.serviceMonitor.additionalLabels }}
+    {{- with $monitoring.serviceMonitor.additionalLabels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
 spec:
@@ -15,6 +16,6 @@ spec:
   endpoints:
     - port: http
       path: /metrics
-      interval: {{ .Values.monitoring.serviceMonitor.interval }}
-      scrapeTimeout: {{ .Values.monitoring.serviceMonitor.scrapeTimeout }}
+      interval: {{ $monitoring.serviceMonitor.interval }}
+      scrapeTimeout: {{ $monitoring.serviceMonitor.scrapeTimeout }}
 {{- end }} 
