--- a/argocd/applications/python-app.yaml
+++ b/argocd/applications/python-app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-org/k3s-demo.git
+    repoURL: https://github.com/Sourav04/demo_k8s_app_aws.git
     targetRevision: HEAD
     path: helm/python-app
     helm:
