downsizing cluster to reduce cost as it is using t3 samll instance

--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -17,7 +17,8 @@ spec:
           repository: souravdixit04/demo_k8s_app_aws
           tag: main
         service:
-          type: LoadBalancer
+          type: NodePort
+          nodePort: 30080
         replicaCount: 2
         resources:
           requests:
