--- a/helm/python-app/values.yaml
+++ b/helm/python-app/values.yaml
@@ -29,9 +29,8 @@ podSecurityContext: {}
 securityContext: {}
 
 service:
-  type: LoadBalancer
-  port: 8080
-  targetPort: 5000
+  type: NodePort
+  nodePort: 30080
 
 ingress:
   enabled: false
